<resources>
    <string name="app_name">K-Medica</string>
    <string name="ingreso"> Ingresar</string>
    <string name="registro"> Registrar </string>
    <string name="bienvenido"> Bienvenido </string>
    <string name="run"> RUN </string>
    <string name="contrasena"> Contraseña</string>
    <string name="inresoMedico"> Ingreso de Usuario</string>
    <string name="mail">e-mail</string>
    <string name="especialidad"> Especialidad</string>
    <string name="nombre">Nombre</string>
    <string name="ubicacionConsulta">Ubicación consulta</string>
    <string name="RegistrarUsuario">Registrar Usuario</string>


    <!--String del Menú-->
    <string name="opcion1">Cerrar Sesión</string>
    <string name="opcion2">Ejemplo</string>
    <string name="title_activity_ficha_medica">FichaMedica</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>

    <!--Strings Tabs-->
    <string name="fichaDatosUsuario">Datos Usuario</string>
    <string name="fichaProxima">Anamnesis Próxima</string>
    <string name="fichaRemota">Anamnesis Remota</string>
    <string name="fichaFisico">Exámen Físico</string>
    <string name="fichaDiagnostico">Diagnóstico</string>
    <string name="fichaTratamiento">Tratamiento</string>

    <!--String botones fragment fichas-->
    <string name="editUsuario">Editar Dato Usuario</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>