<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistroMedico">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="-136dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/RegistrarUsuario"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/registroMedico_run"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="@string/run"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="@+id/textView3"
                app:layout_constraintHorizontal_bias="0.513"
                app:layout_constraintStart_toStartOf="@+id/textView3"
                app:layout_constraintTop_toBottomOf="@+id/registroMedico_textrun" />

            <TextView
                android:id="@+id/registroMedico_textrun"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/run"
                app:layout_constraintStart_toStartOf="@+id/registroMedico_run"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

            <TextView
                android:id="@+id/registroMedico_textnombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/nombre"
                app:layout_constraintStart_toStartOf="@+id/registroMedico_nombre"
                app:layout_constraintTop_toBottomOf="@+id/registroMedico_run" />

            <EditText
                android:id="@+id/registroMedico_nombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="@string/nombre"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="@+id/registroMedico_run"
                app:layout_constraintStart_toStartOf="@+id/registroMedico_run"
                app:layout_constraintTop_toBottomOf="@+id/registroMedico_textnombre" />

            <EditText
                android:id="@+id/registroMedico_mail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="@string/mail"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="@+id/registroMedico_nombre"
                app:layout_constraintStart_toStartOf="@+id/registroMedico_nombre"
                app:layout_constraintTop_toBottomOf="@+id/registroMedico_textemail" />

            <TextView
                android:id="@+id/registroMedico_textemail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/mail"
                app:layout_constraintStart_toStartOf="@+id/registroMedico_mail"
                app:layout_constraintTop_toBottomOf="@+id/registroMedico_nombre" />

            <TextView
                android:id="@+id/registroMedico_textEspecialidad2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/especialidad"
                app:layout_constraintStart_toStartOf="@+id/registroMedico_especialidad"
                app:layout_constraintTop_toBottomOf="@+id/registroMedico_mail" />

            <TextView
                android:id="@+id/registroMedico_textubicacion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/ubicacionConsulta"
                app:layout_constraintStart_toStartOf="@+id/registroMedico_ubicacion"
                app:layout_constraintTop_toBottomOf="@+id/registroMedico_especialidad" />

            <EditText
                android:id="@+id/registroMedico_contrasena"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="@string/contrasena"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="@+id/registroMedico_ubicacion"
                app:layout_constraintStart_toStartOf="@+id/registroMedico_ubicacion"
                app:layout_constraintTop_toBottomOf="@+id/textView10" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/contrasena"
                app:layout_constraintStart_toStartOf="@+id/registroMedico_contrasena"
                app:layout_constraintTop_toBottomOf="@+id/registroMedico_ubicacion" />

            <Spinner
                android:id="@+id/registroMedico_especialidad"
                android:layout_width="211dp"
                android:layout_height="36dp"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="@+id/registroMedico_mail"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/registroMedico_mail"
                app:layout_constraintTop_toBottomOf="@+id/registroMedico_textEspecialidad2" />

            <Spinner
                android:id="@+id/registroMedico_ubicacion"
                android:layout_width="211dp"
                android:layout_height="36dp"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="@+id/registroMedico_mail"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/registroMedico_mail"
                app:layout_constraintTop_toBottomOf="@+id/registroMedico_textubicacion" />

            <Button
                android:id="@+id/registroMedico_btnRegistrar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:layout_marginBottom="32dp"
                android:text="@string/RegistrarUsuario"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/registroMedico_contrasena" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>